--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"/>
 	<link rel="stylesheet" type="text/css" href="./public/fonts/Roboto.css"/>
 	<link rel="stylesheet" type="text/css" href="./public/style.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="Landing">
@@ -38,7 +42,7 @@
 							текст на фоне
 						</div>
 						<div class="Content__button">
-							<a class="Button">Кнопка</a>
+							<a class="Button">Play</a>
 						</div>
 					</div>
 					<div class="Content__image">
@@ -116,11 +120,6 @@
 					<div class="Menu__logotype">
 						<img src="./public/images/logotype_white.png"/>
 					</div>
-					<div class="Menu__list">
-						<a class="Menu__link">Иформация</a>
-						<a class="Menu__link">Список</a>
-						<a class="Menu__link">Таблица</a>
-						<a class="Menu__link">Форма</a><a class="Menu__link">Карта</a>
 					</div>
 				</div>
 			</div>
